I have style student card

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Profile Card Showcase</title>
+    <title>👨‍🎓 Showcase</title>
 </head>
 <body>
     <header>
-        <h1>Profile Card Showcase</h1>
+        <h1>👨‍🎓 Students</h1>
+        <nav>
+            <a href="http://">Github</a>
+            <a href="http://">About</a>
+            <a href="http://">Team</a>
+        </nav>
     </header>
     <main>
         <section id="card-container">
-            
+            <a href="http://" target="_blank" rel="noopener noreferrer"></a>
         </section>
     </main>
     <script src="script.js"></script>
