--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>👨‍🎓 Students</h1>
         <nav>
-            <a href="http://">Github</a>
-            <a href="http://">About</a>
+            <a href="https://github.com/danishzayan/OpenSourceProject">Github</a>
+            <a href="https://www.linkedin.com/in/danishzayan">About</a>
             <a href="http://">Team</a>
         </nav>
     </header>
