--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>👨‍🎓 Students</h1>
         <nav>
             <a href="https://github.com/danishzayan/OpenSourceProject">Github</a>
-            <a href="https://www.linkedin.com/in/danishzayan">About me</a>
+            <a href="https://www.linkedin.com/in/danishzayan">About</a>
             <!-- <a href="http://">Team</a> -->
         </nav>
     </header>
