--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://github.com/danishzayan/OpenSourceProject">
           <i class="fa fa-github fa-lg"></i> GitHub
         </a>
-        <a href="https://www.linkedin.com/in/danishzayan">About</a>
+        <!-- <a href="https://www.linkedin.com/in/danishzayan">About</a> -->
         <!-- <a href="http://">Team</a> -->
       </nav>
     </header>
