--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>👨‍🎓 Showcase</title>
   </head>
   <body>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="profileData.js"></script>
     <header>
       <h1>👨‍🎓 Students</h1>
       <nav>
@@ -26,7 +28,7 @@
         <a href="http://" target="_blank" rel="noopener noreferrer"></a>
       </section>
     </main>
-    <script src="script.js"></script>
+    
     <div id="scroll-to-top-button" onclick="scrollToTop()">
       <i class="fa fa-chevron-up"></i>
     </div>
