--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <a href="http://" target="_blank" rel="noopener noreferrer"></a>
       </section>
     </main>
-    <script src="script.js"></script>
     <div id="scroll-to-top-button" onclick="scrollToTop()">
       <i class="fa fa-chevron-up"></i>
     </div>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
