--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>👨‍🎓 Showcase</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <h1>👨‍🎓 Students</h1>
-      <nav>
-        <a href="https://github.com/danishzayan/OpenSourceProject">
-          <i class="fa fa-github fa-lg"></i> GitHub
-        </a>
-        <!-- <a href="https://www.linkedin.com/in/danishzayan">About</a> -->
-        <!-- <a href="http://">Team</a> -->
-      </nav>
+        <h1>👨‍🎓 Students</h1>
+        <nav>
+            <a href="https://github.com/danishzayan/OpenSourceProject">
+                <i class="fa fa-github fa-lg"></i> GitHub
+            </a>
+            <!-- <a href="https://www.linkedin.com/in/danishzayan">About</a> -->
+            <!-- <a href="http://">Team</a> -->
+        </nav>
     </header>
     <main>
-      <section id="card-container">
-        <a href="http://" target="_blank" rel="noopener noreferrer"></a>
-      </section>
+        <section id="card-container">
+            <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+            <section id="user-profiles"></section>
+        </section>
     </main>
     <script src="script.js"></script>
     <div id="scroll-to-top-button" onclick="scrollToTop()">
-      <i class="fa fa-chevron-up"></i>
+        <i class="fa fa-chevron-up"></i>
     </div>
-  </body>
+    <script src="profileData.js"></script>
+    <div id="scroll-to-top-button" onclick="scrollToTop()">
+        <i class="fa fa-chevron-up"></i>
+    </div>
+
+</body>
+
 </html>
