I have added a search icon in navbar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <body>
     <header>
       <h1>👨‍🎓 Students</h1>
+      <div class="search-box">
+        <button class="btn-search"><i class="fa fa-search"></i></button>
+        <input type="text" class="input-search" placeholder="Type to Search...">
+      </div>
       <nav>
         <a href="https://github.com/danishzayan/OpenSourceProject">
           <i class="fa fa-github fa-lg"></i> GitHub
