Updated the code

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
   <body>
     <header>
       <h1>👨‍🎓 Students</h1>
-      <div class="search-box">
-        <button class="btn-search"><i class="fa fa-search"></i></button>
-        <input type="text" class="input-search" placeholder="Type to Search...">
-      </div>
       <nav>
         <a href="https://github.com/danishzayan/OpenSourceProject">
           <i class="fa fa-github fa-lg"></i> GitHub
@@ -24,6 +20,16 @@
         <!-- <a href="https://www.linkedin.com/in/danishzayan">About</a> -->
         <!-- <a href="http://">Team</a> -->
       </nav>
+      
+      <div class="wrap">
+        <div class="search">
+           <input type="text" class="searchTerm" placeholder="What are you looking for?">
+           <button type="submit" class="searchButton">
+             <i class="fa fa-search"></i>
+          </button>
+        </div>
+     </div>
+      
     </header>
     <main>
       <section id="card-container">
